fix(module: modal): only hide scrollbar when enable mask (#4302)

--- a/components/drawer/style/patch.less
+++ b/components/drawer/style/patch.less
@@ -1,4 +1,4 @@
-body:has(.ant-drawer-open) {
+body:has(.ant-drawer-open .ant-drawer-mask) {
     overflow: hidden;
     padding-right: var(--ant-scrollbar-width);
 }
